--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -183,8 +183,11 @@ jhipster:
   #   exposed-headers: "Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params"
   #   allow-credentials: true
   #   max-age: 1800
+
+#  mail:
+#    from: yaroshludmilanick@gmail.com
   mail:
-    from: linter@localhost
+     from: yaroshludmilanick@gmail.com
   api-docs:
     default-include-pattern: ${server.servlet.context-path:}/api/**
     management-include-pattern: ${server.servlet.context-path:}/management/**
